syntax = "proto3";

package protobuf;

import "google/api/annotations.proto";

// Interface exported by the server.
service Dice {

    rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {
        option (google.api.http) = {
            get: "/users"
        };
    }

    rpc UserActivity(UserRequest) returns (UserActivityResponse) {
        option (google.api.http) = {
            get: "/users/{username}/activity"
        };
    }

    rpc UserRepositories(UserRequest) returns (UserRepositoriesResponse) {
        option (google.api.http) = {
            get: "/users/{username}/repos"
        };
    }

}

message ListUsersRequest {

}
message UserRequest {
    string username = 1;
}
message UserResponse {
    string username = 1;
    string display_name = 2;
}
message ListUsersResponse {
    repeated UserResponse users = 1;
}
message ActivityResponse {
    string created_at = 1;
    string actor = 2;
    string repo_name = 3;
    string type = 4;
    string summaryline = 5;
}
message UserActivityResponse {
    repeated ActivityResponse activity = 1;
}
message RepositoryResponse {
    string name = 1;
}
message UserRepositoriesResponse {
    repeated RepositoryResponse repository = 1;
}